--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,6 +1,6 @@
 .button {
 	cursor: pointer;
-	
+	outline-color: none;
 
 	&:disabled {
 		opacity: 0.5;
@@ -9,49 +9,28 @@
 	}
 }
 
-.circle {
-	border-radius: 50%;
-	outline: none;
-	border: none;
+.primary {
+	background: red;
 }
 
-.size-40 {
-	width: 40px;
-	height: 40px;
-	background: var(--main-backgrond-color);
-	border: 1px solid var(--period-button-border);
+.outline {
+	background: green;
 }
 
-.size-50{
+// .size-s {
+
+// }
+
+.size-m{
 	width: 50px;
-	height: 50px;
+	height: 35px;
+	border-radius: 15%;
 }
 
-.size-25{
-	width: 25px;
-	height: 25px;
-}
+// .size-l{
 
-.size-50, .size-25 {
-	background: var(--main-backgrond-color);
-	border: 1px solid var(--period-button-border);
+// }
 
-	&:hover {
-		background: white;
-	}
+// .size-x {
 
-	&:disabled {
-		background: var(--main-backgrond-color);
-	}
-}
-
-.size-56 {
-	width: 56px;
-	height: 56px;	
-	background: var(--main-backgrond-color);
-}
-
-.shadow {
-	box-shadow: var(--slider-active-button-shadow);
-	border: none;
-}
+// }
