--- a/src/shared/layouts/MainLayout/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/MainLayout.module.scss
@@ -1,8 +1,9 @@
 .mainLayout {
+	position: relative;
 	min-height: 100vh;
 	display: grid;
 	grid-template-columns: 1fr minmax(auto, 1100px) 250px 1fr;
-	grid-template-rows: 1fr 1fr;
+	grid-template-rows: 1fr 100px;
 
 	// background: green;
 
@@ -29,11 +30,11 @@
 }
 
 .filters {
-	position: sticky;
-
 	// background: blue;
 
 	@media (width > 762px) {
+		position: fixed;
+		top: 30px;
 		grid-column: 3 / 4;
 	}
 
