--- a/src/entities/Product/components/ProductsList/ProductsList.module.scss
+++ b/src/entities/Product/components/ProductsList/ProductsList.module.scss
@@ -1,3 +1,12 @@
 .products {
 	// =
 }
+
+.loader {
+	width: 100vw; 
+	height: 100vh; 
+	display: flex; 
+	justify-content: center;
+	align-items: center;
+	font-size: 100px;
+}
