--- a/src/pages/ProductsPage/components/ProductsPage.module.scss
+++ b/src/pages/ProductsPage/components/ProductsPage.module.scss
@@ -1,8 +1,8 @@
 .overlay {
-	width: 100%; 
-	height: 100vh; 
-	display: flex; 
-	justify-content: center;
-	align-items: center;
-	font-size: 100px;
+	// width: 100%; 
+	// height: 100vh; 
+	// display: flex; 
+	// justify-content: center;
+	// align-items: center;
+	// font-size: 100px;
 }
