--- a/src/shared/layouts/MainLayout/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/MainLayout.module.scss
@@ -9,7 +9,7 @@
 
 	@media (width <= 762px) {
 		grid-template-columns: 1fr;
-		grid-template-rows: minmax(auto, 200px) 1fr 1fr;
+		grid-template-rows: minmax(auto, 200px) 1fr 200px;
 	}
 }
 
