--- a/src/entities/Product/components/ProductsList/ProductsList.module.scss
+++ b/src/entities/Product/components/ProductsList/ProductsList.module.scss
@@ -14,3 +14,17 @@
 		font-size: 50px;
 	}
 }
+
+.header {
+	font-size: 50px; 
+	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+
+	@media (width <= 762px) {
+		font-size: 30px;
+		padding-top: 20px;
+	}
+}
