--- a/src/widgets/productsFilters/components/ProductsFilters/ProductsFilters.module.scss
+++ b/src/widgets/productsFilters/components/ProductsFilters/ProductsFilters.module.scss
@@ -2,3 +2,17 @@
 	border: 2px solid black;
 	padding: 10px;
 }
+
+.header {
+	width: 100%;
+	font-size: 30px; 
+	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+
+	@media (width <= 762px) {
+		font-size: 30px;
+	}
+}
